fixed height alignment issue of code editor for schema free

--- a/src/app/utils/code-editor/code-editor.component.scss
+++ b/src/app/utils/code-editor/code-editor.component.scss
@@ -1,5 +1,5 @@
-.code-editor {
-  height: calc(100%);
+#code-editor {
+  min-height: 76vh !important;
 
   &.hide-cursor{
     .monaco-editor .cursors-layer > .cursor {
